--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.4.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,7 +42,6 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "tailwindcss": "^4.1.11"
+    "postcss-flexbugs-fixes": "^5.0.2"
   }
 }
